<resources>
    <string name="app_name">SHIELD</string>
    <string name="pick_up">PICK UP</string>
    <string name="pick_up_food">PICK UP FOOD</string>
    <string name="date">Sat 23 Feb</string>
    <string name="time">01:23 PM</string>
    <string name="welcome">WELCOME</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. \n Phasellus ornare lectus eget nulla condimentum placerat. \n Morbi eu ipsum a lectus vehicula tincidunt.</string>
    <string name="pickup_btn_desc">Select the task you want to perform</string>
    <string name="btn_close_text">Close</string>
    <string name="btn_close_text_x">X</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="enter_the_order_no">Enter the last 4 digits of the order number</string>
    <string name="last_4_digits">(last 4 digits)</string>
    <string name="select_bays_title">HOW MANY BAYS \n DO YOU NEED?</string>
    <string name="add_more_bays">+ ADD MORE</string>
    <string name="btn_text_continue">CONTINUE</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="open">OPEN</string>
    <string name="back">BACK</string>
    <string name="tv_load_order_title">please load the order \n and close the bay(s)</string>
    <string name="done">DONE</string>
    <string name="cancel">Cancel</string>
    <string name="add_more_bays_load_order">+ add more bays</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="error_msg_pickup_flow">Wrong Order ID\nOR\nYour order might not be ready.\n\n<b>Please contact a staff member.</b></string>
    <string name="error_msg_late_pickup">You are late!\n\n\n</string>
    <string name="thank_you">THANK YOU!!</string>
    <string name="step_1_thank_you">Pickup your order in the open bay(s).</string>
    <string name="step_2_thank_you">Close the bay(s) when your are finished.</string>
    <string name="how_the_order_was_placed">Select How the Order was Placed</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_loading">Loading Settings</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_users">User Settings</string>
    <string name="menu_loading">Loading Settings</string>
    <string name="menu_pick_up">Pick Up</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_system">System</string>
    <string name="menu_back_loading">Back Loading</string>
    <string name="menu_exit">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_settings">User Settings</string>
    <string name="add_user">+ ADD USER</string>
    <string name="btn_back_text">Back</string>
    <string name="test_name">Test Name</string>
    <string name="test_user_level">Test User Level</string>
    <string name="edit_user">Edit User</string>
    <string name="scan_key_card">Scan Key Card</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="dialog_text_1">Do you really want to delete this record?</string>
    <string name="dialog_text_2">This process cannot be undone.</string>
    <string name="late_pickup_settings">Late Pickup Settings</string>
    <string name="late_pickup_timer">Late Pickup Timer</string>
    <string name="bay_management">Bay Management</string>

    <string name="order_brief">Order ID: %1$d\nStatus: %2$s\nLoaded at: %3$s</string>
    <string name="bay_color_settings">Bay Color Settings</string>
    <string name="settings_notifications">Settings - Notifications</string>
    <string name="settings_accounts">User Settings</string>
    <string name="open_bay_settings">Open Bay Settings</string>
    <string name="timeout_1">Warning #1</string>
    <string name="set_timer_button">set timer button</string>
    <string name="color">Color</string>
    <string name="beep">Beep</string>
    <string name="timeout_2">Warning #2</string>
    <string name="home_screen_settings">Home Screen Settings</string>
    <string name="logo">Logo</string>
    <string name="select">Select</string>
    <string name="logo_description"><b>Max Resolution:</b> 100px x 100px supported formats: PNG, jPGE</string>
    <string name="welcome_message">Welcome Message</string>
    <string name="welcome_title">Welcome title</string>
    <string name="settings_system">Settings - System</string>
    <string name="time_and_date">Time and Date</string>
    <string name="add_new">+ ADD NEW</string>
    <string name="edit_courier">edit courier</string>
    <string name="courier_name">Courier Name</string>
    <string name="courier_logo">Courier Logo</string>
    <string name="alphanumeric_order_number">Alphanumeric Order Number?</string>
    <string name="bay_settings">Bay Settings</string>
    <string name="save">SAVE</string>
    <string name="dialog_change_no_of_bays_warning">You are going to change the number of bays. \n Bay Calibration will be reset to default.</string>
    <string name="bay_calibration">Bay Calibration</string>
    <string name="order_management">Order Management</string>
    <string name="settings_simple">Settings</string>
    <string name="load_food">LOAD FOOD</string>
    <string name="load_in">LOAD IN</string>
    <string name="ops_failed_to_recognise_order_no">Ops! Failed to recognize Order ID</string>
    <string name="need_help">NEED HELP?</string>
    <string name="no_bays_available">You can continue with the current available bays\nor cancel the order</string>
    <string name="nav_open">open nav</string>
    <string name="nav_close">close nav</string>
    <string name="do_you_really_want_to_delete_this_order_nthis_process_cannot_be_undone">Do you really want to delete this Order?\nThis process cannot be Undone.</string>
    <string name="delete_user_line">Do you really want to delete this User?\nThis process cannot be Undone.</string>
    <string name="delete_app_line">Do you really want to delete this App?\nThis process cannot be Undone.</string>
</resources>