<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_settings_landing_screen">

    <fragment
        android:id="@+id/nav_settings_landing_screen"
        android:name="com.example.smartlockerandroid.fragments.SettingsLandingScreenFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings_landing_screen" />

    <fragment
        android:id="@+id/nav_bay_settings"
        android:name="com.example.smartlockerandroid.fragments.BayManagementFragment"
        android:label="@string/bay_settings"
        tools:layout="@layout/fragment_bay_management" />

    <fragment
        android:id="@+id/nav_user_settings"
        android:name="com.example.smartlockerandroid.fragments.UserAccountsFragment"
        android:label="@string/settings_accounts"
        tools:layout="@layout/fragment_user_accounts" />

    <fragment
        android:id="@+id/nav_courier_settings"
        android:name="com.example.smartlockerandroid.fragments.CourierListFragment"
        android:label="@string/settings_loading"
        tools:layout="@layout/fragment_courier_list" />

    <fragment
        android:id="@+id/nav_late_pickup_settings"
        android:name="com.example.smartlockerandroid.fragments.LatePickupSettingsFragment"
        android:label="@string/settings_notifications"
        tools:layout="@layout/fragment_late_pickup_settings" />


    <fragment
        android:id="@+id/nav_open_bay_settings"
        android:name="com.example.smartlockerandroid.fragments.OpenBaySettingsFragment"
        android:label="@string/settings_notifications"
        tools:layout="@layout/fragment_open_bay_settings" />

    <fragment
        android:id="@+id/nav_home_screen_settings"
        android:name="com.example.smartlockerandroid.fragments.HomeScreenSettingsFragment"
        android:label="@string/settings_system"
        tools:layout="@layout/fragment_home_screen_settings" />

    <fragment
        android:id="@+id/nav_back_loading"
        android:name="com.example.smartlockerandroid.fragments.BackLoadingFragment"
        tools:layout="@layout/fragment_back_loading" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.smartlockerandroid.fragments.HistoryFragment"
        tools:layout="@layout/fragment_history" />

</navigation>