<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgVw_home_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:id="@+id/layout_home_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="60dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextClock
                android:id="@+id/tc_home_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextClock
                android:id="@+id/tc_home_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="28sp" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_home_welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative" />


    <TextView
        android:id="@+id/tv_home_welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="12dp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_welcome_title" />

    <TextView
        android:id="@+id/tv_home_pickUp_btn_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/pickup_btn_desc"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_pickUp_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_welcome_message" />


    <RelativeLayout
        android:id="@+id/btn_pickUp_home"
        style="@style/round_orange_btn_style_new"
        android:layout_width="570dp"
        android:layout_height="100dp"
        android:paddingHorizontal="110dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_load_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/pick_up_food"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/pickup_button_img" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_load_home"
        style="@style/round_white_btn_style_new"
        android:layout_width="570dp"
        android:layout_height="100dp"
        android:paddingHorizontal="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/load_food"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/load_food_button_img" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>